[CHANGED] Unified the DTOs